# cplace

./: .gitignore  Cargo.toml  host.sh
client/: Cargo.toml  index.html
client/src/: app.rs  lib.rs  main.rs
client/src/map/: TODO.md  cache.rs  camera.rs  grid.rs  loader.rs  mod.rs  renderer.rs  tile.rs
client/src/shader/: grid.wgsl  tile.wgsl
client/src/state/: mod.rs
